Pulley: first, just copy over the null backend plugin

--- a/pulleyback/CMakeLists.txt
+++ b/pulleyback/CMakeLists.txt
@@ -8,5 +8,8 @@ set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 # sorted out; that's easier to do without the extra checks for Erlang.
 #
 # find_package(Erlang REQUIRED)
+find_package (Steamworks 0.8 REQUIRED)
+
+include_directories (${Steamworks_INCLUDE_DIRS})
 
 add_subdirectory (src)
