Pulley: include Erlang headers

--- a/pulleyback/CMakeLists.txt
+++ b/pulleyback/CMakeLists.txt
@@ -4,9 +4,9 @@ project (pulleyback_erl)
 
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 
-find_package(Erlang REQUIRED)
+find_package (Erlang REQUIRED)
 find_package (Steamworks 0.8 REQUIRED)
 
-include_directories (${Steamworks_INCLUDE_DIRS})
+include_directories (${Steamworks_INCLUDE_DIRS} ${Erlang_INCLUDE_DIRS})
 
 add_subdirectory (src)
